# claude-history

./: .gitignore  .mcp.json  BUILDLOG.md  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SCHEMA.md  STATE.md  config.json  v1.1-UAT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-scaffolding-schema-discovery/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-database-ingest/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-mcp-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-integration-readme/: 04-01-SUMMARY.md
.planning/phases/05-search-filters-export/: 05-01-SUMMARY.md
.planning/phases/06-ingest-improvements/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/claude_history/: __init__.py  config.py  db.py  ingest.py  schema_discovery.py  search.py  server.py
tests/: test_db.py  test_ingest.py  test_search_filters.py
