[project]
name = "claude-history"
version = "0.1.0"
description = "MCP server for searching Claude.ai conversation history"
authors = [
    { name = "twostar01", email = "69169037+twostar01@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
server = "claude_history.server:main"
ingest = "claude_history.ingest:main"
schema-discovery = "claude_history.schema_discovery:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
